# persistent-map

./: .clippy.toml  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: README.md  csv_example.rs  in_memory_example.rs  sqlite_example.rs
src/: lib.rs
src/backends/: csv.rs  in_memory.rs  mod.rs  sqlite.rs
tests/: csv_tests.rs  in_memory_tests.rs  persistence_tests.rs  sqlite_tests.rs
